# opencli-rs

./: Cargo.toml
crates/opencli-rs-ai/src/: llm.rs
crates/opencli-rs-browser/src/: bridge.rs  daemon_client.rs
crates/opencli-rs-cli/src/: main.rs
crates/opencli-rs-pipeline/src/steps/: browser.rs
