[workspace]
resolver = "2"
members = [
    "crates/opencli-rs-core",
    "crates/opencli-rs-pipeline",
    "crates/opencli-rs-browser",
    "crates/opencli-rs-output",
    "crates/opencli-rs-discovery",
    "crates/opencli-rs-external",
    "crates/opencli-rs-ai",
    "crates/opencli-rs-cli",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
